# sanity_log_parser

./: .gitignore  AGENTS.md  AGENTS_AIRGAPPED.md  AGENTS_AIRGAPPED_CSH.md  AGENT_TUNING.md  AIRGAPPED_GCA_TUNING_JSON.md  README.md  VARIABLE_POSITION_WEIGHTS_GUIDE.md  VARIABLE_VALUE_WEIGHTS_GUIDE.md  ai_clusterer.py  ai_weights.py  api_config.py  config.json.example  log_parser.py  logic_clusterer.py  main.py  parser.py  pyproject.toml  rule_clustering_config.json  template_manager.py  test_parse_example.py  test_variable_value_weights.py  test_variable_weights.py  view_log.py
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-baseline-snapshot.txt  task-1-pytest-pass.txt  task-6-error-handling.txt
.sisyphus/notepads/code-quality-refactor/: learnings.md
.sisyphus/plans/: code-quality-refactor.md
conversation/: round_01.md  round_02.md  round_03.md  round_04.md  round_05.md
src/sanity_log_parser/: _util.py  cli.py  console.py  patterns.py  view.py
src/sanity_log_parser/clustering/: logic.py
tests/: conftest.py  test_adaptive_eps_fit.py  test_adaptive_eps_tuning.py  test_ai_clusterer.py  test_api_config.py  test_batch_embeddings.py  test_cli_output.py  test_cli_pipeline.py  test_config_resolution.py  test_des_0001_restored.py  test_distance_matrix.py  test_gca_config.py  test_gca_distances.py  test_gca_eval.py  test_logic_clusterer.py  test_main_config_resolution.py  test_openai_compat_embeddings.py  test_parser.py  test_primetime_parser.py  test_results_schema_v2.py  test_template_manager.py  test_view.py  test_weight_tuning.py
(+24 files in other folders)
