[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sanity-log-parser"
version = "0.1.0"
description = "Parse and cluster sanity logs."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
ai-local = ["sentence-transformers", "scikit-learn"]
ai-remote = ["scikit-learn"]
dev = ["pytest"]

[project.scripts]
sanity-log-parser = "sanity_log_parser.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sanity_log_parser = ["data/*.json", "gca/*.json"]
